--- a/src/App.css
+++ b/src/App.css
@@ -434,6 +434,7 @@
 .ghost-button {
   background: #eef2ff;
   color: #4f46e5;
+  text-decoration: none;
 }
 
 .ghost-button:disabled {
@@ -535,5 +536,7 @@
   .page-header {
     padding: 32px 100px 18px;
   }
+
+
 
 
